<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date_of_period"
        android:layout_gravity="center"
        android:textColor="@color/RED"/>

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20-07-2015"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/BLUE"
        android:onClick="StartDateClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date_of_period"
        android:layout_gravity="center"
        android:textColor="@color/RED"/>

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="22-08-2015"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/BLUE"
        android:onClick="endDateClick"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/RED"
            android:text="@string/max_amount_of_launches_for_return"/>
        <EditText
            android:id="@+id/etAmountLanches"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxLength= "2"
            android:inputType="number"
            android:hint="1-99"
            android:text="20"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_getPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_launches_of_period"
        android:onClick="getPeriod"/>

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/GREEN"
        android:textSize="17sp"
        android:text="@string/result_of_request" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    </androidx.recyclerview.widget.RecyclerView>




    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="end|bottom"-->
<!--        android:contentDescription="@string/fab_text"-->
<!--        android:tooltipText="@string/fab_text"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:layout_margin="16dp"-->
<!--        />-->


</LinearLayout>